--- a/Poll/Poll/Storyboards/Voting.storyboard
+++ b/Poll/Poll/Storyboards/Voting.storyboard
@@ -25,20 +25,23 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your name:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OvE-eI-Hl1">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your name:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OvE-eI-Hl1">
                                 <rect key="frame" x="16" y="132" width="343" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your response:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wnH-Kj-iZL">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your response:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wnH-Kj-iZL">
                                 <rect key="frame" x="16" y="170" width="343" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O4a-Vg-0sw">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O4a-Vg-0sw">
                                 <rect key="frame" x="16" y="208" width="343" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="22" id="KIW-NC-Bx1"/>
+                                </constraints>
                                 <state key="normal" title="Submit"/>
                                 <connections>
                                     <action selector="submitResponse:" destination="ucf-BH-Ggv" eventType="touchUpInside" id="eoN-5x-hkq"/>
@@ -47,17 +50,17 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="wnH-Kj-iZL" firstAttribute="leading" secondItem="O4a-Vg-0sw" secondAttribute="leading" id="2O9-bf-DJ9"/>
-                            <constraint firstItem="SXI-B3-570" firstAttribute="centerX" secondItem="OvE-eI-Hl1" secondAttribute="centerX" id="5BA-xb-ubK"/>
-                            <constraint firstItem="OvE-eI-Hl1" firstAttribute="trailing" secondItem="wnH-Kj-iZL" secondAttribute="trailing" id="EMV-2c-eok"/>
-                            <constraint firstItem="OvE-eI-Hl1" firstAttribute="leading" secondItem="dg5-t6-HbB" secondAttribute="leadingMargin" id="G8a-q6-jxR"/>
-                            <constraint firstItem="wnH-Kj-iZL" firstAttribute="trailing" secondItem="O4a-Vg-0sw" secondAttribute="trailing" id="JOJ-PC-gRS"/>
-                            <constraint firstItem="kIc-XI-03l" firstAttribute="bottom" secondItem="O4a-Vg-0sw" secondAttribute="bottom" constant="437" id="LWZ-DY-SRb"/>
-                            <constraint firstItem="wnH-Kj-iZL" firstAttribute="top" secondItem="OvE-eI-Hl1" secondAttribute="bottom" constant="8" symbolic="YES" id="UZP-sq-KCp"/>
-                            <constraint firstItem="SXI-B3-570" firstAttribute="top" secondItem="kIc-XI-03l" secondAttribute="top" constant="27" id="kaE-gE-Zpe"/>
-                            <constraint firstItem="OvE-eI-Hl1" firstAttribute="leading" secondItem="wnH-Kj-iZL" secondAttribute="leading" id="sOb-qK-xU6"/>
-                            <constraint firstItem="O4a-Vg-0sw" firstAttribute="top" secondItem="wnH-Kj-iZL" secondAttribute="bottom" constant="8" symbolic="YES" id="wja-sl-nIV"/>
-                            <constraint firstItem="OvE-eI-Hl1" firstAttribute="trailing" secondItem="dg5-t6-HbB" secondAttribute="trailingMargin" id="wk3-gN-cDS"/>
+                            <constraint firstItem="SXI-B3-570" firstAttribute="top" secondItem="kIc-XI-03l" secondAttribute="top" constant="27" id="0sn-Hh-sA5"/>
+                            <constraint firstItem="OvE-eI-Hl1" firstAttribute="trailing" secondItem="wnH-Kj-iZL" secondAttribute="trailing" id="7Cg-F0-k2E"/>
+                            <constraint firstItem="wnH-Kj-iZL" firstAttribute="trailing" secondItem="O4a-Vg-0sw" secondAttribute="trailing" id="9Zk-xR-vg3"/>
+                            <constraint firstItem="OvE-eI-Hl1" firstAttribute="trailing" secondItem="dg5-t6-HbB" secondAttribute="trailingMargin" id="Coq-Gf-oUl"/>
+                            <constraint firstItem="OvE-eI-Hl1" firstAttribute="leading" secondItem="dg5-t6-HbB" secondAttribute="leadingMargin" id="Hoz-xB-g3b"/>
+                            <constraint firstItem="SXI-B3-570" firstAttribute="centerX" secondItem="OvE-eI-Hl1" secondAttribute="centerX" id="JiX-Ca-Wjr"/>
+                            <constraint firstItem="wnH-Kj-iZL" firstAttribute="leading" secondItem="O4a-Vg-0sw" secondAttribute="leading" id="JtU-Sp-w3g"/>
+                            <constraint firstItem="O4a-Vg-0sw" firstAttribute="top" secondItem="wnH-Kj-iZL" secondAttribute="bottom" constant="8" symbolic="YES" id="OWd-AV-BWF"/>
+                            <constraint firstItem="OvE-eI-Hl1" firstAttribute="top" secondItem="SXI-B3-570" secondAttribute="bottom" constant="64" id="esv-Yw-O1G"/>
+                            <constraint firstItem="OvE-eI-Hl1" firstAttribute="leading" secondItem="wnH-Kj-iZL" secondAttribute="leading" id="thQ-wJ-ZNn"/>
+                            <constraint firstItem="wnH-Kj-iZL" firstAttribute="top" secondItem="OvE-eI-Hl1" secondAttribute="bottom" constant="8" symbolic="YES" id="v0M-r8-Ez8"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="kIc-XI-03l"/>
                     </view>
