Fix tab bar item issue

--- a/Poll/Poll/Storyboards/Combined.storyboard
+++ b/Poll/Poll/Storyboards/Combined.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Combined View Controller-->
+        <!--Combined-->
         <scene sceneID="yBD-ud-faO">
             <objects>
                 <viewController id="XKO-qO-LjD" customClass="CombinedViewController" customModule="Poll" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1YB-ZP-4XT">
-                                <rect key="frame" x="10" y="371" width="355" height="296"/>
+                                <rect key="frame" x="10" y="371" width="355" height="247"/>
                                 <connections>
                                     <segue destination="sLI-01-GCG" kind="embed" identifier="ResultsTable" id="Q4Q-ps-kah"/>
                                 </connections>
@@ -44,6 +44,8 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="E5o-c1-DB1"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Combined" id="HK8-aa-oGf"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="018-oj-KKh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
