Completed CombinedViewController. Added functionality to segues.

--- a/Poll/Poll/Stroyboards/Voting.storyboard
+++ b/Poll/Poll/Stroyboards/Voting.storyboard
@@ -19,44 +19,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Zc-hr-YWB">
+                                <rect key="frame" x="16" y="61" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your Response" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iNJ-4x-vTN">
+                                <rect key="frame" x="16" y="99" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6J9-GI-r9r">
+                                <rect key="frame" x="163" y="137" width="49" height="30"/>
+                                <state key="normal" title="Submit"/>
+                                <connections>
+                                    <action selector="submitButtonAction:" destination="vxp-VW-Abd" eventType="touchUpInside" id="mgq-Hi-C2q"/>
+                                </connections>
+                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What is your favorite color?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5hM-dw-SHD">
                                 <rect key="frame" x="83" y="32" width="209" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Zc-hr-YWB">
-                                <rect key="frame" x="16" y="109" width="343" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your Response" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iNJ-4x-vTN">
-                                <rect key="frame" x="16" y="71" width="343" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6J9-GI-r9r">
-                                <rect key="frame" x="163" y="147" width="49" height="30"/>
-                                <state key="normal" title="Submit"/>
-                                <connections>
-                                    <action selector="submitButtonAction:" destination="vxp-VW-Abd" eventType="touchUpInside" id="mgq-Hi-C2q"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="5hM-dw-SHD" firstAttribute="top" secondItem="P3u-1Y-1mo" secondAttribute="top" constant="12" id="1FF-Zo-FTA"/>
-                            <constraint firstItem="8Zc-hr-YWB" firstAttribute="centerX" secondItem="6J9-GI-r9r" secondAttribute="centerX" id="7he-V9-k1F"/>
-                            <constraint firstItem="iNJ-4x-vTN" firstAttribute="trailing" secondItem="8Zc-hr-YWB" secondAttribute="trailing" id="CUh-wR-gGl"/>
-                            <constraint firstItem="iNJ-4x-vTN" firstAttribute="trailing" secondItem="Fl0-9G-WUT" secondAttribute="trailingMargin" id="Ydl-hC-2Nr"/>
-                            <constraint firstItem="6J9-GI-r9r" firstAttribute="top" secondItem="8Zc-hr-YWB" secondAttribute="bottom" constant="8" symbolic="YES" id="c6G-Wl-5Mp"/>
-                            <constraint firstItem="8Zc-hr-YWB" firstAttribute="top" secondItem="iNJ-4x-vTN" secondAttribute="bottom" constant="8" symbolic="YES" id="duG-Mf-zsT"/>
-                            <constraint firstItem="iNJ-4x-vTN" firstAttribute="leading" secondItem="Fl0-9G-WUT" secondAttribute="leadingMargin" id="f2M-hB-tNx"/>
-                            <constraint firstItem="iNJ-4x-vTN" firstAttribute="leading" secondItem="8Zc-hr-YWB" secondAttribute="leading" id="oaU-m6-UiV"/>
-                            <constraint firstItem="iNJ-4x-vTN" firstAttribute="top" secondItem="5hM-dw-SHD" secondAttribute="bottom" constant="18" id="vEg-mp-3nb"/>
-                            <constraint firstItem="5hM-dw-SHD" firstAttribute="centerX" secondItem="iNJ-4x-vTN" secondAttribute="centerX" id="wli-MQ-SGE"/>
+                            <constraint firstItem="5hM-dw-SHD" firstAttribute="top" secondItem="P3u-1Y-1mo" secondAttribute="top" constant="12" id="24s-co-A1S"/>
+                            <constraint firstItem="8Zc-hr-YWB" firstAttribute="leading" secondItem="iNJ-4x-vTN" secondAttribute="leading" id="48d-7c-J2T"/>
+                            <constraint firstItem="8Zc-hr-YWB" firstAttribute="trailing" secondItem="iNJ-4x-vTN" secondAttribute="trailing" id="96a-nG-wlr"/>
+                            <constraint firstItem="iNJ-4x-vTN" firstAttribute="centerX" secondItem="6J9-GI-r9r" secondAttribute="centerX" id="BW4-HA-8hP"/>
+                            <constraint firstItem="8Zc-hr-YWB" firstAttribute="trailing" secondItem="Fl0-9G-WUT" secondAttribute="trailingMargin" id="KBG-Sq-maW"/>
+                            <constraint firstItem="8Zc-hr-YWB" firstAttribute="top" secondItem="5hM-dw-SHD" secondAttribute="bottom" constant="8" symbolic="YES" id="MiM-Kc-tJK"/>
+                            <constraint firstItem="6J9-GI-r9r" firstAttribute="top" secondItem="iNJ-4x-vTN" secondAttribute="bottom" constant="8" symbolic="YES" id="WXu-3M-Bgw"/>
+                            <constraint firstItem="8Zc-hr-YWB" firstAttribute="leading" secondItem="Fl0-9G-WUT" secondAttribute="leadingMargin" id="g6f-iH-s1Z"/>
+                            <constraint firstItem="5hM-dw-SHD" firstAttribute="centerX" secondItem="8Zc-hr-YWB" secondAttribute="centerX" id="gef-78-c18"/>
+                            <constraint firstItem="iNJ-4x-vTN" firstAttribute="top" secondItem="8Zc-hr-YWB" secondAttribute="bottom" constant="8" symbolic="YES" id="n82-89-4L9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="P3u-1Y-1mo"/>
                     </view>
