--- a/Poll/Poll/Combined.storyboard
+++ b/Poll/Poll/Combined.storyboard
@@ -8,19 +8,25 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Combined View Controller-->
         <scene sceneID="HWS-su-TUC">
             <objects>
-                <viewController id="PFB-UZ-7nr" sceneMemberID="viewController">
+                <viewController id="PFB-UZ-7nr" customClass="CombinedViewController" customModule="Poll" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OIV-Y0-CSl">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kj5-Ir-u8m">
                                 <rect key="frame" x="16" y="20" width="343" height="323.5"/>
+                                <connections>
+                                    <segue destination="j6G-UO-RQo" kind="embed" identifier="votingSegue" id="H9o-Kx-R51"/>
+                                </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pxI-2q-HJd">
                                 <rect key="frame" x="16" y="343.5" width="343" height="323.5"/>
+                                <connections>
+                                    <segue destination="HPU-fD-mSG" kind="embed" identifier="resultsSegue" id="2lT-IK-Esw"/>
+                                </connections>
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -38,6 +44,22 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k1l-Ay-ZOG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+        </scene>
+        <!--Voting-->
+        <scene sceneID="OkO-Ey-I9o">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Voting" id="j6G-UO-RQo" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gS7-gs-Y4x" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="682" y="220"/>
+        </scene>
+        <!--Results-->
+        <scene sceneID="UJm-ev-Srd">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Results" id="HPU-fD-mSG" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gu8-hq-jSM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="708" y="511"/>
         </scene>
     </scenes>
 </document>
